US17780 Fix issue on safari
Former-commit-id: ae59d4e0749c8b0b5c65af3d23324252fafa65ca

--- a/assets/less/widget.less
+++ b/assets/less/widget.less
@@ -1622,7 +1622,7 @@ th.ui-th-column div {
   background-repeat: no-repeat;
   position: absolute;;
   margin-top: -9px;
-  width: 283px;
+  width: 284px;
   right: 61px;
 }
 
@@ -2539,6 +2539,12 @@ th.ui-th-column div {
         span {
           margin-right: 15px;
           color: @color-C18;
+          
+        }
+        ul {
+          display: inline-block;
+          vertical-align: top;
+          margin-left: 0px;
         }
       
         input {
